--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -339,106 +339,128 @@
                     <div id="attr" class="tab-pane" role="tabpanel" style="display: none">
                         <div class="row">
                             <div class="col-md-2 hidden-xs-down hidden-sm-down">
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="hitPiercePunch" ng-click="hitPiercePunchAnimateRelatedAttributes()"
-                                        title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="ng-scope"
-                                         height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{hitPiercePunch}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="hitPiercePunch" ng-click="hitPiercePunchAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{hitPiercePunch}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="hitChopPunch" ng-click="hitChopPunchAnimateRelatedAttributes()"
-                                        title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/hitChopPunch.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{hitChopPunch}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="hitChopPunch" ng-click="hitChopPunchAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/hitChopPunch.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{hitChopPunch}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="rangedHit"
-                                        ng-click="rangedHitAnimateRelatedAttributes()"
-                                        title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/rangedHit.svg"
-                                         class="ng-scope tooltips" height="40" width="40">
-                                    <span class="ng-binding ng-scope">{{rangedHit}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived" id="rangedHit"
+                                            ng-click="rangedHitAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/rangedHit.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{rangedHit}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="parryPiercePunch" ng-click="parryPiercePunchAnimateRelatedAttributes()"
-                                        title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="parryPiercePunch" ng-click="parryPiercePunchAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{parryPiercePunch}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="parryChopPunch" ng-click="parryChopPunchAnimateRelatedAttributes()"
-                                        title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/parryChopPunch.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{parryChopPunch}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="parryChopPunch" ng-click="parryChopPunchAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/parryChopPunch.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{parryChopPunch}}</span>
+                                </div>
 
                             </div>
                             <div class="col-md-2 hidden-xs-down hidden-sm-down">
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="dodge"
-                                        ng-click="dodgeAnimateRelatedAttributes()"
-                                        title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope tooltips"
-                                         height="40" width="40">
-                                    <span class="ng-binding ng-scope">{{dodge}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived" id="dodge"
+                                            ng-click="dodgeAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/dodge.svg" class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{dodge}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="generalActionPoints"
-                                        ng-click="generalActionPointsAnimateRelatedAttributes()"
-                                        title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/generalActionPoints.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="generalActionPoints"
+                                            ng-click="generalActionPointsAnimateRelatedAttributes($event)"
+                                            title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/generalActionPoints.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{generalActionPoints}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="mentalActionPoints" ng-click="mentalActionPointsAnimateRelatedAttributes()"
-                                        title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/mentalActionPoints.png"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="mentalActionPoints"
+                                            ng-click="mentalActionPointsAnimateRelatedAttributes($event)"
+                                            title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/mentalActionPoints.png"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{mentalActionPoints}}</span>
+                                </div>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
-                                        id="endurancePoints" ng-click="endurancePointsAnimateRelatedAttributes()"
-                                        title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/endurancePoints.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{endurancePoints}}</span>
-                                </button>
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="initiative"
-                                        ng-click="initiativeAnimateRelatedAttributes()"
-                                        title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"
-                                        rel="tooltip">
-                                    <img src="/assets/common/img/erilon-icon/initiative.svg"
-                                         class="ng-scope tooltips" height="40"
-                                         width="40">
-                                    <span class="ng-binding ng-scope">{{initiative}}</span>
-                                </button>
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived"
+                                            id="endurancePoints" ng-click="endurancePointsAnimateRelatedAttributes($event)"
+                                            title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/endurancePoints.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{endurancePoints}}</span>
+                                </div>
+
+                                <div style="width: 100%;">
+                                    <button class="btn btn-rounded margin-inline derived" id="initiative"
+                                            ng-click="initiativeAnimateRelatedAttributes($event)"
+                                            title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"
+                                            rel="tooltip">
+                                        <img src="/assets/common/img/erilon-icon/initiative.svg"
+                                             class="derived tooltips">
+                                        <div class="arrow-right"></div>
+                                    </button>
+                                    <span class="derived">{{initiative}}</span>
+                                </div>
                             </div>
                             <div class="col-md-8">
                                 <table id="attrTable" class="table table-hover">
@@ -458,14 +480,15 @@
                                         <td>
                                             <div class="btn-group btn-group-justified plus-minus-block">
                                                 <div class="btn-group">
-                                                    <button class="btn btn-rounded btn-sm btn-secondary"
+                                                    <button class="btn btn-rounded btn-sm btn-secondary btn-decrease"
                                                             ng-click="decreaseAttribute(personageAttribute)"
-                                                            type="button">
+                                                            type="button"
+                                                            ng-disabled="personageAttribute.value < 2">
                                                         <i class="icmn-minus"></i>
                                                     </button>
                                                 </div>
                                                 <div class="btn-group">
-                                                    <button class="btn btn-rounded btn-sm btn-primary"
+                                                    <button class="btn btn-rounded btn-sm btn-success"
                                                             ng-click="increaseAttribute(personageAttribute)"
                                                             type="button">
                                                         <i class="icmn-plus"></i>
