--- a/public/views/trigger_skills/trigger_skills_manager.html
+++ b/public/views/trigger_skills/trigger_skills_manager.html
@@ -28,6 +28,13 @@
     <!-- Clean UI Scripts -->
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
+
+    <script src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="/node_modules/i18next/i18next.min.js"></script>
+    <script src="/node_modules/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
+    <script src="/node_modules/ng-i18next/dist/ng-i18next.min.js"></script>
+    <script src="/views/i18-initialization.js"></script>
+
     <script src="/assets/common/js/common.min.js"></script>
 
 
@@ -43,7 +50,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <h1>ЭРИЛОН</h1>
+                    <h1 ng-i18next>brand_name</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
@@ -51,55 +58,55 @@
                     <li>
                         <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            Персонажи
+                            <span ng-i18next>left_menu_characters</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            Расы
+                            <span ng-i18next>left_menu_races</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                             <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                            Атрибуты
-                        </a>
-                    </li>
-                    <li>
-                        <a class="left-menu-link" href="/views/merits/merit_manager.html">
-                            <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                            Достоинства
+                            <span ng-i18next>left_menu_attributes</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                             <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                            Врожденные особенности
-                        </a>
-                    </li>
-                    <li>
-                        <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
-                            <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                            Недостатки
+                            <span ng-i18next>left_menu_inherents</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                             <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                            Прикрепленные навыки
+                            <span ng-i18next>left_menu_attached_skills</span>
                         </a>
                     </li>
                     <li class="left-menu-list-active">
                         <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                             <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                            Тригерные навыки
+                            <span ng-i18next>left_menu_trigger_skills</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/merits/merit_manager.html">
+                            <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
+                            <span ng-i18next>left_menu_merits</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
+                            <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
+                            <span ng-i18next>left_menu_flaws</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/spells/spells_manager.html">
                             <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                            Заклинания
+                            <span ng-i18next>left_menu_spells</span>
                         </a>
                     </li>
                 </ul>
@@ -116,23 +123,27 @@
                     <div class="dropdown dropdown-avatar">
                         <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
-                            <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
+                            <span class="user-name"><span
+                                    ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
                             <span class="avatar" href="#">
-                        <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}" alt="Avatar">
+                        <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
+                             alt="Здесь должен быть аватар">
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="/views/profile/profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <a class="dropdown-item" href="/views/profile/profile.html"><i
+                                    class="dropdown-icon icmn-user"></i><span
+                                    ng-i18next>top_menu_dropdown_profile</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                    class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
+                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i> Сменить профиль</a>
+                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
-                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"
-                               ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление
-                                доступом</a>
+                            <a class="dropdown-item" href="/views/permissions/managePermissions.html"
+                               ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
+                                    ng-i18next>top_menu_dropdown_admin</span></a>
                         </ul>
                     </div>
                 </div>
@@ -142,7 +153,7 @@
                         <div class="menu-info-block">
                             <div class="example-buy-btn hidden-xs-down">
                                 <div class="btn expir btn-success-outline btn-rounded">
-                                    Права: {{player.Role.name}}
+                                    <span ng-i18next>top_menu_role</span> {{player.Role.name}}
                                 </div>
                             </div>
                         </div>
