--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -759,7 +759,7 @@
                                 <hr/>
                                 <table class="table table-hover category-table"
                                        style="margin-bottom: 0">
-                                    <tr ng-click="filterAttachedSkillsByCategory('магические', filter.magic)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.magic', filter.magic)">
                                         <td style="width: 15%;">
                                             <i ng-show="filter.magic" class="fa fa-check"></i>
                                             <input name="magic" type="checkbox" ng-model="filter.magic"
@@ -769,7 +769,7 @@
                                             page.character.attached_skills_categories.magic
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByCategory('социальные', filter.attached_social)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.social', filter.attached_social)">
                                         <td>
                                             <i ng-show="filter.attached_social" class="fa fa-check"></i>
                                             <input name="social" type="checkbox" ng-model="filter.attached_social"
@@ -779,7 +779,7 @@
                                             page.character.attached_skills_categories.social
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByCategory('языки', filter.language)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.languages', filter.language)">
                                         <td>
                                             <i ng-show="filter.language" class="fa fa-check"></i>
                                             <input name="languages" type="checkbox" ng-model="filter.language"
@@ -789,7 +789,7 @@
                                             page.character.attached_skills_categories.languages
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByCategory('знания', filter.knowledge)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.lores', filter.knowledge)">
                                         <td>
                                             <i ng-show="filter.knowledge" class="fa fa-check"></i>
                                             <input name="knowledge" type="checkbox" ng-model="filter.knowledge"
@@ -799,7 +799,7 @@
                                             page.character.attached_skills_categories.lores
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByCategory('ремесла', filter.craft)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.crafts', filter.craft)">
                                         <td>
                                             <i ng-show="filter.craft" class="fa fa-check"></i>
                                             <input name="crafts" type="checkbox" ng-model="filter.craft"
@@ -809,7 +809,7 @@
                                             page.character.attached_skills_categories.crafts
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByCategory('профессиональные', filter.prof)">
+                                    <tr ng-click="filterAttachedSkillsByCategory('page.character.attached_skills_categories.professional', filter.prof)">
                                         <td>
                                             <i ng-show="filter.prof" class="fa fa-check"></i>
                                             <input name="professional" type="checkbox" ng-model="filter.prof"
@@ -998,7 +998,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input name="fight" type="checkbox" ng-model="filter.fight" id="fightFilter"
-                                           ng-change="filterTriggerSkillsByCategory('боевые', filter.fight)">
+                                           ng-change="filterTriggerSkillsByCategory('page.character.trigger_skills_categories.fight', filter.fight)">
                                     <label for="fightFilter" ng-i18next>
                                         page.character.trigger_skills_categories.fight
                                     </label>
@@ -1007,7 +1007,7 @@
 
                                     <input name="nonfight" type="checkbox" ng-model="filter.nonfight"
                                            id="nonfightFilter"
-                                           ng-change="filterTriggerSkillsByCategory('небоевые', filter.nonfight)">
+                                           ng-change="filterTriggerSkillsByCategory('page.character.trigger_skills_categories.no_fight', filter.nonfight)">
                                     <label for="nonfightFilter" ng-i18next>
                                         page.character.trigger_skills_categories.no_fight
                                     </label>
@@ -1037,7 +1037,7 @@
                                 <hr/>
                                 <table class="table table-hover category-table"
                                        style="margin-bottom: 0">
-                                    <tr ng-click="filterTriggerSkillsByCategory('боевые', filter.fight)">
+                                    <tr ng-click="filterTriggerSkillsByCategory('page.character.trigger_skills_categories.fight', filter.fight)">
                                         <td style="width: 15%;">
                                             <i ng-show="filter.fight" class="fa fa-check"></i>
                                             <input type="checkbox" ng-model="filter.fight" style="display: none;">
@@ -1046,7 +1046,7 @@
                                             page.character.trigger_skills_categories.fight
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterTriggerSkillsByCategory('небоевые', filter.nonfight)">
+                                    <tr ng-click="filterTriggerSkillsByCategory('page.character.trigger_skills_categories.no_fight', filter.nonfight)">
                                         <td>
                                             <i ng-show="filter.nonfight" class="fa fa-check"></i>
                                             <input type="checkbox" ng-model="filter.nonfight" style="display: none;">
